Changes have been made

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -69,7 +69,7 @@
     <ul class="links">
       <li>
         <a href="https://github.com/JoshKernick?tab=repositories">
-          <img src="pictures/Github_logo.png"></img>GitHub
+          <img src="pictures/Github_logo.png"></img>
         </a>
       </li>
     </ul>
