Added and changed things

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Website</title>
+  <title>Josh Kernick CV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
 </head>
@@ -19,17 +19,17 @@
     <h2>Skills</h2>
 
     <ul class="pictures">
-      <li><img src="pictures/Python_logo.png"></img></li>
-      <li><img src="pictures/HTML_logo.png"></img></li>
-      <li><img src="pictures/CSS_logo.png"></img></li>
-      <li><img src="pictures/Javascript_logo.png"></img></li>
-      <li><img src="pictures/Git_logo.png"></img></li>
-      <li><img src="pictures/SQL_logo.png"></img></li>
+      <li><img id="p0" src="pictures/Python_logo.png"></img></li>
+      <li><img id="p1" src="pictures/HTML_logo.png"></img></li>
+      <li><img id="p2" src="pictures/CSS_logo.png"></img></li>
+      <li><img id="p3" src="pictures/Javascript_logo.png"></img></li>
+      <li><img id="p4" src="pictures/Git_logo.png"></img></li>
+      <li><img id="p5" src="pictures/SQL_logo.png"></img></li>
     </ul>
 
     <p><b>Python – Intermediate</b>Started learning during my computing AS, it was my introduction to programming and it is my primary language. See my GitHub for examples of my work.</p>
 
-    <p><b>HTML / CSS – Intermediate</b>Words</p>
+    <p><b>HTML / CSS – Intermediate</b>Taken online courses on Codecademy and built up enough knowledge to build this website from scratch</p>
 
     <p><b>JavaScript – Basic</b>Taking various online courses, including reaching level 5kyu on Codewars and learning about progressive web applications.</p>
 
@@ -66,10 +66,16 @@
   <section>
     <h2>Other</h2>
     <p>I have uploaded examples of my work on github.com/JoshKernick. This includes a website I have made about myself. Interests of mine include: playing the guitar, building computers when I get the chance and all things space related. I’m also an avid gamer.</p>
+    <p>Gmail: JoshKernick@gmail.com</p>
     <ul class="links">
       <li>
         <a href="https://github.com/JoshKernick?tab=repositories">
           <img src="pictures/Github_logo.png"></img>
+        </a>
+      </li>
+      <li>
+        <a href="mailto:JoshKernick@gmail.com">
+          <img src="pictures/Gmail_logo.png"></img>
         </a>
       </li>
     </ul>
