Even more changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section>
     <h2>Other</h2>
     <p>I have uploaded examples of my work on github.com/JoshKernick. This includes a website I have made about myself. Interests of mine include: playing the guitar, building computers when I get the chance and all things space related. I’m also an avid gamer.</p>
-    <p>Gmail: JoshKernick@gmail.com</p>
+    <p id="email">JoshKernick@gmail.com</p>
     <ul class="links">
       <li>
         <a href="https://github.com/JoshKernick?tab=repositories">
@@ -79,6 +79,7 @@
         </a>
       </li>
     </ul>
+
   </section>
 
 </body>
