--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <h2>Other</h2>
     <p>I have uploaded examples of my work on github.com/JoshKernick. This includes a website I have made about myself. Interests of mine include: playing the guitar, building computers when I get the chance and all things space related. I’m also an avid gamer.</p>
     <p id="email">JoshKernick@gmail.com</p>
+    <a href="first_site/index.html">My first website</a>
     <ul class="links">
       <li>
         <a href="https://github.com/JoshKernick?tab=repositories">
