--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
   </section>
 
   <section>
+    <h2>Portfolio</h2>
+    <p><a href="first_site/index.html">Here is the first website</a> I made while learning HTML/CSS. Along with this site I coded it from the ground up, rather than using any framework in order increase my understanding.</p>
+    <p>I have uploaded examples of my programming work on GitHub.</p>
+    <p>Interests of mine include: playing the guitar, building computers when I get the chance and all things space related. I’m also an avid gamer.</p>
+    <ul class="links">
+      <li>
+        <a href="https://github.com/JoshKernick?tab=repositories">
+          <img src="pictures/Github_logo.png"></img>
+        </a>
+      </li>
+    </ul>
+  </section>
+
+  <section>
     <h2>Education</h2>
     <article>
       <div class="table">
@@ -64,23 +78,9 @@
   </section>
 
   <section>
-    <h2>Other</h2>
-    <p>I have uploaded examples of my work on github.com/JoshKernick. This includes a website I have made about myself. Interests of mine include: playing the guitar, building computers when I get the chance and all things space related. I’m also an avid gamer.</p>
-    <p id="email">JoshKernick@gmail.com</p>
-    <a href="first_site/index.html">My first website</a>
-    <ul class="links">
-      <li>
-        <a href="https://github.com/JoshKernick?tab=repositories">
-          <img src="pictures/Github_logo.png"></img>
-        </a>
-      </li>
-      <li>
-        <a href="mailto:JoshKernick@gmail.com">
-          <img src="pictures/Gmail_logo.png"></img>
-        </a>
-      </li>
-    </ul>
-
+    <a class="email" href="mailto:JoshKernick@gmail.com">
+      <img src="pictures/Gmail_logo.png"></img>
+    </a>
   </section>
 
 </body>
