Added info and moved email link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <section>
     <h2>About me</h2>
     <p>I am teaching myself various programming languages and skills with the hope of becoming a web developer. I have completed my AS level in computer science and am now looking for a role as a junior web developer, apprentice or intern.</p>
+    <p id="info">JoshKernick@gmail.com - Central London</p>
   </section>
 
   <section>
@@ -50,6 +51,11 @@
           <img src="pictures/Github_logo.png"></img>
         </a>
       </li>
+      <li>
+        <a class="email" href="mailto:JoshKernick@gmail.com">
+          <img src="pictures/Gmail_logo.png"></img>
+        </a>
+      </li>
     </ul>
   </section>
 
@@ -76,11 +82,4 @@
       </div>
     </article>
   </section>
-
-  <section>
-    <a class="email" href="mailto:JoshKernick@gmail.com">
-      <img src="pictures/Gmail_logo.png"></img>
-    </a>
-  </section>
-
 </body>
