Another one of these?

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <li><img id="p5" src="pictures/SQL_logo.png"></img></li>
     </ul>
 
-    <p><b>Python – Intermediate</b>Started learning during my computing AS, it was my introduction to programming and it is my primary language. See my GitHub for examples of my work.</p>
+    <p><b id="b0">Python – Intermediate</b>Started learning during my computing AS, it was my introduction to programming and it is my primary language. See my GitHub for examples of my work.</p>
 
-    <p><b>HTML / CSS – Intermediate</b>Taken online courses on Codecademy and built up enough knowledge to build this website from scratch</p>
+    <p><b id="b1">HTML / CSS – Intermediate</b>Taken online courses on Codecademy and built up enough knowledge to build this website from scratch</p>
 
-    <p><b>JavaScript – Basic</b>Taking various online courses, including reaching level 5kyu on Codewars and learning about progressive web applications.</p>
+    <p><b id="b3">JavaScript – Basic</b>Taking various online courses, including reaching level 5kyu on Codewars and learning about progressive web applications.</p>
 
-    <p><b>SQL – Basic</b>Learned the basics of relational databases online using Python.</p>
+    <p><b id="b4">SQL – Basic</b>Learned the basics of relational databases online using Python.</p>
 
-    <p><b>Git – Basic</b>Used Git to help manage my code and my website is hosted on GitHub pages.</p>
+    <p><b id="b5">Git – Basic</b>Used Git to help manage my code and my website is hosted on GitHub pages.</p>
 
   </section>
 
@@ -83,5 +83,7 @@
       </div>
     </article>
   </section>
-  
+
+  <script src="app.js"></script>
+
 </body>
