changes list items to spans for icons

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <section>
     <h2>Skills</h2>
 
-    <ul class="pictures">
-      <li><img id="p0" src="pictures/Python_logo.png"></img></li>
-      <li><img id="p1" src="pictures/HTML_logo.png"></img></li>
-      <li><img id="p2" src="pictures/CSS_logo.png"></img></li>
-      <li><img id="p3" src="pictures/Javascript_logo.png"></img></li>
-      <li><img id="p4" src="pictures/Git_logo.png"></img></li>
-      <li><img id="p5" src="pictures/SQL_logo.png"></img></li>
-    </ul>
+    <div class="icons">
+      <span class="icon"><img id="p0" src="pictures/Python_logo.png"></img></span>
+      <span class="icon"><img id="p1" src="pictures/HTML_logo.png"></img></span>
+      <span class="icon"><img id="p2" src="pictures/CSS_logo.png"></img></span>
+      <span class="icon"><img id="p3" src="pictures/Javascript_logo.png"></img></span>
+      <span class="icon"><img id="p4" src="pictures/Git_logo.png"></img></span>
+      <span class="icon"><img id="p5" src="pictures/SQL_logo.png"></img></span>
+    </div>
 
     <p><b id="b0">Python – Intermediate</b>Started learning during my computing AS, it was my introduction to programming and it is my primary language. See my GitHub for examples of my work.</p>
 
