--- a/bs_index.html
+++ b/bs_index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Josh Kernick CV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/mods/bootstrap.min.css">
 </head>
 
 <body>
@@ -116,9 +116,9 @@
 
     </section>
 
-    <script src="/node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="/node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/mods/jquery.slim.min.js"></script>
+    <script src="/mods/popper.min.js"></script>
+    <script src="/mods/bootstrap.min.js"></script>
 
   </div>
 </body>
